--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project-3 | Bootstrap</title>
+  <title>Project-4 | Bootstrap</title>
   <link rel="icon" href="img/logo.png">
 
   <!-- bootstrap icons -->
@@ -173,14 +173,49 @@
 
 
 <!-- client section -->
-
+<section class="client py-5"> 
+  <div class="container-lg">
+    <div class="row">
+      <div class="col-md-2">
+        <div class="img">
+          <img class="img-fluid" src="img/clients/client-1.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="img">
+          <img class="img-fluid" src="img/clients/client-2.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="img">
+          <img class="img-fluid" src="img/clients/client-3.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="img">
+          <img class="img-fluid" src="img/clients/client-4.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="img">
+          <img class="img-fluid" src="img/clients/client-5.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="img">
+          <img class="img-fluid" src="img/clients/client-6.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <!-- features section -->
-<section class="features py-4 mb-5" id="features">
+<section class="features py-2 mb-5" id="features">
   <div class="container-lg">
-    <div class="row mt-4">
-     <div class="col-md-6 mt-2 mb-4">
+    <div class="row mt-2">
+     <div class="col-md-6 mb-4">
        <div class="features-img">
          <img class="img-fluid" src="img/features.jpg" alt="">
        </div>
