--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <section class="header" id="header">
     <nav class="navbar navbar-expand-md  bg-light fixed-top shadow bg-transparent">
       <div class="container">
-          <a class="navbar-brand fs-2 text-white fw-bold" href="#">GP <span class="text-warning">.</span></a>
+          <a class="navbar-brand fs-2 text-white fw-bold" href="#">GP <span class="text-warning fs-2">.</span></a>
 
           <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#main_menu">
               <span class="navbar-toggler-icon"></span>
