--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <div class="row">
       <div class="col-lg-8">
         <div class="services-title">
-          <p class="text-muted">SERVICES</p>
+          <p class="text-muted after">SERVICES</p>
           <h3>CHECK OUR SERVICES</h3>
         </div>
       </div>
@@ -379,7 +379,7 @@
     <div class="row">
       <div class="col-lg-8">
         <div class="portfolio-title">
-          <p class="text-muted">PORTFOLIO</p>
+          <p class="text-muted after">PORTFOLIO</p>
           <h3 class="fw-bold">CHECK OUR PORTFOLIO</h3>
         </div>
       </div>
@@ -621,7 +621,7 @@
     <div class="row">
       <div class="col-lg-8">
         <div class="section-title">
-          <p class="text-muted">TEAM</p>
+          <p class="text-muted after">TEAM</p>
           <h2 class="fw-bold mb-5">CHECK OUR TEAM</h2>
         </div>
       </div>
@@ -677,7 +677,7 @@
     <div class="row">
       <div class="col-lg-8">
         <div class="section-title">
-          <p class="text-muted">CONTACT</p>
+          <p class="text-muted after">CONTACT</p>
           <h2 class="fw-bold mb-5">CONTACT US</h2>
         </div>
       </div>
